
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char** env ;
 int env_len ;
 size_t env_pos ;
 int strlen (char*) ;

int add_env(char *string)
{
 int i;


 if (!string) {
  env[env_pos] = ((void*)0);
  return(env_len);
 }


 env[env_pos] = string;
 env_len += strlen(string) + 1;
 env_pos++;


 if ((strlen(string) + 1) % 4)
  for (i = 0; i < (4 - ((strlen(string)+1)%4)); i++, env_pos++) {
   env[env_pos] = string + strlen(string);
   env_len++;
  }

 return(env_len);
}
